/*
 * This file was generated by the Gradle 'init' task.
 *
 * This project uses @Incubating APIs which are subject to change.
 */

plugins {
    id 'java-library'
    id 'maven-publish'
    id 'eclipse'
    id 'java'
}

repositories {
    mavenLocal()
    maven {
        url = uri('https://repo.maven.apache.org/maven2/')
    }
}

dependencies {

    api 'org.apache.httpcomponents:httpclient:4.5.14'
    api 'org.apache.httpcomponents:httpcore:4.4.16'
    api 'commons-io:commons-io:2.16.0'
    api 'commons-logging:commons-logging:1.2'
    api 'org.apache.commons:commons-lang3:3.14.0'
    api 'joda-time:joda-time:2.12.2'
	api 'commons-codec:commons-codec:1.16.1'
    api 'jakarta.xml.bind:jakarta.xml.bind-api:4.0.1'
    api 'jakarta.xml.ws:jakarta.xml.ws-api:4.0.1'
    testImplementation 'junit:junit:4.12'
    testImplementation 'org.hamcrest:hamcrest-all:1.3'
    testImplementation 'org.mockito:mockito-core:1.10.19'
    testImplementation 'org.slf4j:slf4j-api:1.7.12'
    testImplementation 'ch.qos.logback:logback-classic:1.1.3'
    testImplementation 'org.slf4j:jcl-over-slf4j:1.7.12'
}

group = "${group}"
version = "${version}"
description = 'Exchange Web Services Java API'


sourceCompatibility = JavaVersion.VERSION_17
targetCompatibility = JavaVersion.VERSION_17

java {
    withSourcesJar()
//    withJavadocJar()
}

test {
     doFirst {
        jvmArgs += [
                '--add-opens', 'java.base/java.lang=ALL-UNNAMED',
        ]
    }
}


publishing {
		logger.info "publishing"
		//Mit dem Schalter "-Plocalrepo" kann in das lokale Repos geschrieben werden
		if (project.hasProperty("localrepo")) {
			repositories {
				maven {
					url file("${buildDir}/maven")
				}
			}
		} else {
			repositories {
				maven {
					url = "https://frog.css.de:8443/repository/thirdparty/"
					credentials {
						username muser
						password mpassword
					}
				}
			}
		}

    publications {
        maven(MavenPublication) {
            from(components.java)
            pom {
                description = project.description
                licenses {
                    license {
                        name = 'The MIT License'
                        url = "http://opensource.org/licenses/MIT"
                    }
                }
            }
        }
    }
}

tasks.withType(JavaCompile) {
    options.encoding = 'UTF-8'
}

tasks.withType(Javadoc) {
    options.encoding = 'UTF-8'
}


